# AI-Personal-Knowledge-Operating-System

./: .gitignore  .graphifyignore  README.md
.kilo/: kilo.json
pkos/: .env.example  Dockerfile  README.md  config.yaml  docker-compose.yml  pyproject.toml
pkos/src/pkos/: main.py
pkos/src/pkos/crews/research_crew/: research_crew.py
pkos/src/pkos/crews/research_crew/config/: agents.yaml  tasks.yaml
