[project]
name = "pkos"
version = "0.1.0"
description = "pkos using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[openai,tools]==1.9.3",
]

[project.scripts]
kickoff = "pkos.main:kickoff"
run_crew = "pkos.main:kickoff"
plot = "pkos.main:plot"
run_with_trigger = "pkos.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
